# Generic-Counter-Factual-Regret-Minimization-Lib

./: CMakeLists.txt  GenericCFRGameTree.sln  README.md
CFRGameTree_UnitTests/: CFRGameTree_UnitTests.cpp  CFRGameTree_UnitTests.vcxproj  CFRGameTree_UnitTests.vcxproj.filters  pch.h
GenericCFRGameTree/: CMakeLists.txt  ChildNodeUtils.h  GenericCFRGameTree.cpp  GenericCFRGameTree.vcxproj  GenericCFRGameTree.vcxproj.filters  PreProcessor.cpp  cfr.h  cfrGameTreeTypes.h  cfrGameTreeUtils.cpp  cfrGameTreeUtils.h  cfr_concepts.h  cfr_infoset.cpp  cfr_search_tree.cpp  cfr_tree_nodes.h  gameHistory.h  game_classes.h  genericCFRGameTree.h  new_tree_nodes.h  nextState.cpp  nextState.h  nodes.h  pch.h
GenericCFRGameTree/dev/: CMakeLists.txt
GenericCFRGameTree/dev/Test/: rps.h  test_main.cpp
GenericCFRGameTree/dev/include/internal/: float_normalization.h  info_set_tree.h  info_set_tree_node.h  internal.h  search_tree.h  search_tree_node.h  tree_node_utils.h
GenericCFRGameTree/dev/include/internal/Utils/: float_normalization.h  tree_node_utils.h
GenericCFRGameTree/dev/src/: new_tree_nodes.cpp
GenericCFRGameTree/dev/src/internal/: info_set_tree_node.cpp  search_tree_chance_node.cpp  search_tree_node.cpp  search_tree_player_node.cpp  search_tree_terminal_node.cpp
GenericCFRGameTree/dev/src/internal/InfoSetTree/: info_set_tree.cpp  info_set_tree_node.cpp
GenericCFRGameTree/dev/src/internal/SearchTree/: search_tree.cpp  search_tree_chance_node.cpp  search_tree_node.cpp  search_tree_player_node.cpp  search_tree_terminal_node.cpp
GenericCFRGameTree/dev/src/internal/Utils/: float_normalization.cpp
GenericCFRGameTree/include/: CMakeLists.txt  cfr.h  nodes.h
GenericCFRGameTree/src/: CMakeLists.txt  cfr_infoset.cpp
GenericTreeTest/: CMakeLists.txt  GenericTreeTest.vcxproj  GenericTreeTest.vcxproj.filters  NoLimitHoldem.h  RockPaperScissors.h  main.cpp  rock_paper_scissors.h
GenericTreeTest/include/: NoLimitHoldem.h  rock_paper_scissors.h
GenericTreeTest/src/: CMakeLists.txt  main.cpp
